# nyx-lite

./: .gitmodules  Cargo.toml  LICENSE  readme.md
examples/: test_guest_runner.rs
guest/: .gitignore  aixi_guest.c
project_docs/: TODO.txt  debug_doc.txt
src/: breakpoints.rs  disassembly.rs  e2e_test_main.rs  error.rs  firecracker_wrappers.rs  hw_breakpoints.rs  image_builder.rs  lib.rs  main.rs  mem.rs  nyx_vm.rs  snapshot.rs  timer_event.rs  vm_continuation_statemachine.rs
test-binaries/: Cargo.toml
test-binaries/guest_test/: Cargo.toml
tests/: docker_rootfs_builder.rs
vm_image/: README.md  vmconfig.json  vmconfig_abs.json  vmconfig_initramfs.json
vm_image/dockerimage/: build-img.sh
