[package]
name = "nyx-lite"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Lightweight Firecracker-based VM runtime for InfoTheory experiments."
repository = "https://github.com/turtle261/nyx-lite"
homepage = "https://infotheory.tech"
documentation = "https://docs.rs/nyx-lite"
publish = false

[dependencies]
#firecracker = { git = "https://github.com/firecracker-microvm/firecracker" }
firecracker = { path = "./vendor/firecracker-nyx-patches/src/firecracker" }
vmm = { path = "./vendor/firecracker-nyx-patches/src/vmm" }
utils = { path = "./vendor/firecracker-nyx-patches/src/utils" }
seccompiler = { path = "./vendor/firecracker-nyx-patches/src/seccompiler" }
event-manager = "0.4.2"
libc = "0.2.155"
anyhow ="1.0.86"
thiserror="1.0.61"
displaydoc = "0.2.5"
kvm-bindings = { version = "0.14.0", features = ["fam-wrappers", "serde"] }
kvm-ioctls = "0.24.0"
vm-memory = "=0.17.1"

timerfd ="1.6.0"
iced-x86 = "1.21.0"

[lib]
name = "nyx_lite"
path = "src/lib.rs"

[[bin]]
name = "nyx_lite_main"
path = "src/main.rs"

[[bin]]
name = "e2e_test"
path = "src/e2e_test_main.rs"

[profile.release]
debug = true
debug-assertions = true
